<resources>
    <string name="app_name">EatWhat</string>
    <string name="button_bloodpressure">血压</string>
    <string name="button_bloodglucose">血糖</string>
    <string name="button_heartrate">心率</string>
    <string name="button_walkway">步行</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="diner">晚餐</string>
    <string name="snacks">零食</string>


    <string name="issue_date">2019/1/21</string>
    <string name="issue_content">今天走了5公里，感觉身体棒棒哒</string>
    <string name="article_page">精选文章</string>
    <string name="video_page">相关视频</string>
    <string name="chat_zone">交流广场</string>
    <string name="everyday_meal">每日饮食</string>
    <string name="recommend">精选推荐</string>
    <string name="intelligent_test">智能测评</string>
    <string name="article">文章</string>
    <string name="video">视频</string>

    <string name="high_pressure">高压</string>
    <string name="low_pressure">低压</string>
    <string name="sphygmomanometer">血压计测量</string>
    <string name="write_by_hand">手动输入</string>
    <string name="FBG">空腹血糖含量</string>
    <string name="after_meal">饭后血糖含量</string>
    <string name="heart_info">心率每分钟65次</string>
    <string name="today">今天</string>
    <string name="cal">约合消耗了230卡路里</string>


    <string name="login">登       录</string>
    <string name="register">注  册</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="storePassword">保存密码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="newUser">新用户注册</string>
    <string name="makeSurePassword">确认密码</string>
    <string name="nickName">昵称</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>


    <string name="setting">设置</string>
    <string name="personalcenter">个人中心</string>
    <string name="goal">我的计划</string>
    <string name="illness_time">患病时间</string>
    <string name="exercise">运动频率</string>
    <string name="personal_talk">悄悄话</string>
    <string name="friends">我的朋友</string>

    <string name="mood">心情</string>
    <string name="symptom">症状</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>

    <string name="say">在这里说点啥吧</string>
    <string name="address">地点</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
