<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.BloodPressureFragment">

    <!--血压计测量-->
    <Button
        android:id="@+id/sphygmomanometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10px"
        android:layout_marginBottom="10px"
        android:background="@color/transparent"
        android:textColor="@color/Coral"
        android:text="@string/sphygmomanometer"/>
    <!--手动输入-->
    <Button
        android:id="@+id/by_hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sphygmomanometer"
        android:background="@color/transparent"
        android:textColor="@color/Coral"
        android:text="@string/write_by_hand"/>
    <RelativeLayout
        android:id="@+id/show_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">
        <!--高压值-->
        <ImageView
            android:id="@+id/high_pressure_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="20dp"
            android:visibility="visible"
            android:src="@mipmap/high_pressure"/>
        <TextView
            android:id="@+id/high_pressure_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/high_pressure_img"
            android:layout_alignLeft="@+id/high_pressure_img"
            android:visibility="visible"
            android:text="@string/high_pressure"/>
        <!--低压值-->
        <ImageView
            android:id="@+id/low_pressure_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="20dp"
            android:visibility="visible"
            android:src="@mipmap/pressure"/>
        <TextView
            android:id="@+id/low_pressure_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/low_pressure_img"
            android:visibility="visible"
            android:layout_alignLeft="@+id/low_pressure_img"
            android:text="@string/low_pressure"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/write_high"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/show_content"
        android:layout_marginTop="10dp"
        android:hint="@string/high_pressure"
        android:visibility="gone"
        android:textSize="14sp"
        android:textAlignment="center"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/write_low"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/write_high"
        android:layout_marginTop="20dp"
        android:hint="@string/low_pressure"
        android:visibility="gone"
        android:textSize="14sp"
        android:textAlignment="center"
        android:inputType="numberDecimal"/>
    <Button
        android:id="@+id/input_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/write_low"
        android:visibility="gone"
        android:background="@color/transparent"
        android:textColor="@color/colorBottomNavigationAccent"/>

</RelativeLayout>