<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MajorActivity">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light">
                </androidx.appcompat.widget.Toolbar>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <Button
                        android:id="@+id/bloodpressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_bloodpressure" />
                    <!--血压按钮-->
                    <Button
                        android:id="@+id/heartrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_heartrate" />
                    <!--心率-->
                    <Button
                        android:id="@+id/bloodglucose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_bloodglucose" />
                    <Button
                        android:id="@+id/walkway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_walkway" />
                    <!--血糖按钮-->
                </LinearLayout>
            </com.google.android.material.appbar.AppBarLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--顶部的个人参数详情-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/gray"
                    android:layout_margin="10dp">

                </LinearLayout>
                <!--顶部轮播图-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#ffee22"
                    android:layout_margin="10dp"
                    >

                </LinearLayout>
                <!--早餐午餐晚餐选项-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#ff3322"
                    android:layout_margin="10dp">
                    <Button
                        android:id="@+id/breakfast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"/>

                    <Button

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"/>
                    <Button

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"/>
                    <Button

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"/>

                </LinearLayout>
                <!--早中晚餐的列表-->
                <!--<android.support.v7.widget.RecyclerView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent">-->

                <!--</android.support.v7.widget.RecyclerView>-->



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="#223344">

                </LinearLayout>

            </LinearLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:src="@drawable/key"/>
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/myviewpager"
                android:layout_width="match_parent"
                android:layout_height="100dp">

            </androidx.viewpager.widget.ViewPager>
            <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">
            </com.aurelhubert.ahbottomnavigation.AHBottomNavigation>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/nav_menu_xml"
            app:headerLayout="@layout/nav_header">

        </com.google.android.material.navigation.NavigationView>


    </androidx.drawerlayout.widget.DrawerLayout>



</androidx.constraintlayout.widget.ConstraintLayout>